<resources>
    <string name="app_name">Yuvish test</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="mijoz">Mijoz:</string>
    <string name="kvitansiya_id_ni_kiriting">Kvitansiya id ni kiriting</string>
    <string name="kvitansiya_n">Kvitansiya N;</string>
    <string name="ism_telefon_raqami_manzil">Ism, telefon raqami, manzil</string>
    <string name="kvitansiya">Kvitansiya:</string>
    <string name="yuvish_test">Yuvish test</string>
    <string name="_998999999999" translatable="false">+998999999999</string>
    <string name="_2022_08_08_12_45_59" translatable="false">2022–08-08 12:45:59</string>
    <string name="fergana">Fergana</string>
    <string name="yuvishni_ro_yxatga_olish">Yuvishni ro\'yxatga olish</string>
    <string name="text_view">text view</string>
    <string name="asosiy_ko_rsatgichlar">Asosiy ko\'rsatgichlar</string>
    <string name="yangi_buyurtmalar">Yangi buyurtmalar</string>
    <string name="yuvish_bo_limi">Yuvish bo\'limi</string>
    <string name="tayyor_buyurtmalar">Tayyor buyurtmalar</string>
    <string name="sklad_bo_limi">Sklad bo\'limi</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="yuvuvchi_xodim">Yuvuvchi xodim</string>
    <string name="xodim_sozlamalari">Xodim sozlamalari</string>
    <string name="chiqish">Chiqish</string>
    <string-array name="Yillar">
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transport_bo_limi">Transport bo\'limi</string>
    <string name="qidirish">Qidirish</string>
    <string name="bu_bo_limda_mijozlar_tomonidan_berilgan_buyurtmalar_yuvilishi_xaqida_ma_lumotlar_kiritiladi">Bu bo\'limda mijozlar tomonidan berilgan buyurtmalar yuvilishi xaqida ma\'lumotlar kiritiladi.</string>
    <string name="yangi_buyurtma">Yangi Buyurtma</string>
    <string name="mijoz_izlash">Mijoz izlash</string>
    <string name="yangi_mijoz_qo_shish">Yangi mijoz qo\'shish</string>
    <string name="bu_bo_limda_mijozlar_tomonidan_berilgan_buyurtmalar_topshiriladi">Bu bo\'limda mijozlar tomonidan berilgan buyurtmalar topshiriladi.</string>
    <string name="buyurtma">Buyurtma</string>
    <string name="skladda">Skladda</string>
    <string name="topshirishda">Topshirishda</string>
    <string name="qadoqlandi">Qadoqlandi</string>
    <string name="yuvildi">Yuvildi</string>
    <string name="yuvilmoqda">Yuvilmoqda</string>
    <string name="topshirish">Topshirish</string>
    <string name="tartiblash">Tartiblash</string>
    <string name="tartiblangan_buyurtmalar">Tartiblangan buyurtmalar</string>
    <string name="hush_kelibsiz">Hush kelibsiz</string>
    <string name="kirish_uchun_ushbu_formani_to_ldiring">Kirish uchun ushbu formani to\'ldiring</string>
    <string name="parol">Parol*</string>
    <string name="mahfiy_so_z">Mahfiy so\'z*</string>
    <string name="kirish">Kirish</string>
    <string name="parol_kiriting">Parol kiriting</string>
    <string name="login_kiriting">Login kiriting</string>
    <string name="profil">Profil</string>
    <string name="telefon_raqami">Telefon raqami</string>
    <string name="login">Login</string>
    <string name="saqlash">Saqlash</string>
    <string name="o_zgartirmasangiz_bo_sh_qoldiring">O\'zgartirmasangiz bo\'sh qoldiring</string>
    <string name="skladdagi_buyurtmalar">Skladdagi buyurtmalar</string>
    <string name="bugun_ishga_kelganlar">Bugun ishga kelganlar</string>
    <string name="hodim_ismi">Hodim ismi</string>
    <string name="hodim_maoshi">Hodim maoshi</string>
    <string name="keldi">Keldi</string>
    <string name="ketdi">Ketdi</string>
    <string name="_2022" translatable="false">2022</string>
    <string name="ko_rsatgichlar">Ko\'rsatgichlar</string>
    <string name="dan_gacha_tanlash">Dan-gacha tanlash</string>
    <string name="dd_mm_yyyy" translatable="false">dd mm yyyy</string>
    <string name="topshirildi">topshirildi.</string>
    <string name="kpi">KPI.</string>
    <string name="yuvildii">yuvildi.</string>
    <string name="n" translatable="false">№</string>
    <string name="kv">Kv_№</string>
    <string name="tovar_dona">tovar dona</string>
    <string name="xodim">Xodim</string>
    <string name="yuvilgan_buyurtmalar">Yuvilgan buyurtmalar</string>
    <string name="topshirilgan_buyurtmalar">Topshirilgan buyurtmalar</string>
    <string name="hisoblangan_summa">Hisoblangan summa</string>
    <string name="kechildi">Kechildi</string>
    <string name="olingan_maosh">Olingan maosh</string>
    <string name="hodim">Hodim</string>
    <string name="sana">Sana</string>
    <string name="summa">Summa</string>
    <string name="jami">Jami:</string>
    <string name="mijoz_ismi">mijoz ismi</string>
    <string name="telefon_raqami_1">Telefon raqami 1</string>
    <string name="telefon_raqami_2">Telefon raqami 2</string>
    <string name="xx_xxx_xx_xx">xx xxx xx xx</string>
    <string name="_998">+998</string>
    <string name="biz_haqimizda_qayerdan_ma_lumot_oldingiz">Biz haqimizda qayerdan ma\'lumot oldingiz</string>
    <string name="manba">Manba</string>
    <string name="mijoz_f_i_sh_ini_kiriting">Mijoz F.I.SH ini kiriting</string>
    <string name="mijoz_manzilini_kiriting">Mijoz Manzilini kiriting</string>
    <string name="gilamning_sonini_kiriting">Gilamning sonini kiriting</string>
    <string name="adyolning_sonini_kiriting">Adyolning sonini kiriting</string>
    <string name="yangi_vning_sonini_kiritng">Yangi vning sonini kiritng</string>
    <string name="summani_kiriting">Summani kiriting</string>
    <string name="avans">Avans</string>
    <string name="type_avans">Turi avans</string>
    <string name="izoh">Izoh</string>
    <string name="mijoz_haqida_izoh_qoldiring">Mijoz haqida izoh qoldiring</string>
    <string name="mijoz_olib_ketishi">Mijoz olib ketishi</string>
    <string name="ro_yxatga_olish">Ro\'yxatga olish</string>
    <string name="bu_bo_limda_mijozlar_tomonidan_berilgan_buyurtmalar_uchun_kvitansiyalar_kiritiladi">Bu bo\'limda mijozlar tomonidan berilgan buyurtmalar uchun kvitansiyalar kiritiladi.</string>
    <string name="manzil">Manzil</string>
    <string name="_998999998877">+998999998877</string>
    <string name="test_mijoz">Test mijoz</string>
    <string name="_998978878878">+998978878878</string>
    <string name="mijozdan_olgan_pulni_kiriting">Mijozdan olgan pulni kiriting</string>
    <string name="skladga_topshirish">Skladga topshirish</string>
    <string name="buyurtma_izohi">Buyurtma izohi</string>
    <string name="tartib_raqam">Tartib Raqam</string>
    <string name="yuvish">Yuvish</string>
    <string name="shtrix_kodni_kiriting">Shtrix kodni kiriting</string>
    <string name="qayta_yuvish">Qayta Yuvish</string>
    <string name="bu_bo_limda_mahsulotlar_yuviladi">Bu bo\'limda mahsulotlar yuviladi.</string>
    <string name="mahsulot_soni">Mahsulot soni</string>
    <string name="soni_summa">Soni/Summa</string>
    <string name="qayta_yuvishga_olindi">qayta yuvishga olindi.</string>
    <string name="qatorlar">Qatorlar:</string>
    <string name="plus">+</string>
    <string name="jami_summa">Jami summa:</string>
    <string name="jami_to_lov">Jami to\'lov:</string>
    <string name="operator_izoh">Operator izohi:</string>
    <string name="transport_izoh">Transport izohi:</string>
    <string name="qarz_id_raqami">Qarz ID raqami:</string>
    <string name="berish_sanasi">Berish sanasi</string>
    <string name="kechib_yuborish">Kechib Yuborish</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="theme">Mavzu</string>
    <string name="light">Yorqin</string>
    <string name="dark">Qorong\'i</string>
    <string name="kassaga_beriladigan_pullar">Kassaga beriladigan pullar</string>
    <string name="yetkazishga_o_tkazish">Yetkazishga o\'tkazish</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="system_default">Tizim standarti</string>
    <string name="choose_theme">Mavzuni tanlang</string>
    <string name="qarzdorlar_bo_limi">Qarzdorlar bo\'limi</string>
    <string name="qarzlar">Qarzlar</string>
    <string name="tugatish">Tugatish</string>
    <string name="barchasi">Barchasi</string>
    <string name="ism_familiyasi">Ism Familiyasi</string>
    <string name="maosh">Maosh:</string>
    <string name="tilni_tanlang">Tilni tanlang</string>
    <string name="terminal_bank">Terminal bank</string>
    <string name="ajrat">||</string>
    <string name="qarz_summa">Qarz summa</string>
    <string name="bu_bo_limda_qarzdorlarning_ma_lumotlari_bo_ladi">Bu bo\'limda qarzdorlarning ma\'lumotlari bo\'ladi.</string>
    <string name="telefon_raqam_ism">Telefon raqam, Ism</string>
    <string name="yangi_mijoz_ismi">Yangi mijoz ismi</string>
    <string name="yumshoq_o_yinchoqning_sonini_kiriting">Yumshoq o\'yinchoq sonini kiriting</string>
    <string name="topshirilgan_sana">Topshirilgan sana</string>
    <string name="manzili">manzili</string>
    <string name="kvitansiya_no">Kvitansiya №:</string>
    <string name="_1">1+</string>
    <string name="operator">Operator:</string>
    <string name="mijozdan_olingan_pul">Mijozdan olingan pul</string>
    <string name="tartiblanmagan_buyurtmalar">Tartiblanmagan buyurtmalar</string>
    <string name="mijoz_so_zlashuv_tili">Mijoz so\'zlashuv tili</string>
    <string name="o_zbek">O\'zbek</string>
    <string name="yakunlanmagan_qarzlar">Yakunlanmagan qarzlar</string>
    <string name="adyolning_narxi">Adyolning narxi</string>
    <string name="joyida_yuvish_og_irligi">Joyida yuvish og\'irligi</string>
    <string name="kg">kg</string>
    <string name="gilamning_narxi">Gilamning narxi</string>
    <string name="gilam_eni">Gilam eni</string>
    <string name="gilam_bo_yi">Gilam bo\'yi</string>
    <string name="m">m²</string>
    <string name="parda_og_irligi">Parda og\'irligi</string>
    <string name="ogohlantirish">Ogohlantirish</string>
    <string name="izohini_kiriting">Izohini kiriting</string>
    <string name="yangi_v_og_irligi">Yangi v og\'irligi</string>
    <string name="yangi_vning_narxi">Yangi vning narxi</string>
    <string name="yumshoq_o_yinchoq_og_irligi">Yumshoq o\'yinchoq og\'irligi</string>
    <string name="yumshoq_o_yinchoqning_narxi">Yumshoq o\'yinchoqning narxi</string>
    <string name="kpi_hisobi">KPI hisobi.</string>
    <string name="kun">kun</string>
    <string name="mijoz_izohi">Mijoz izohi:</string>
    <string name="to_lov_turi">To\'lov turi</string>
    <string name="pulni_olish">Pulni olish</string>
    <string name="tugallash">Tugallash</string>
    <string name="qayta_yuvishga_olingan_buyurtmalar">Qayta yuvishga olingan buyurtmalar.</string>
    <string name="sanadaqayta_yuvishga_olinganlar">|| sanadaqayta yuvishga olinganlar.</string>
    <string name="turi">Turi:</string>
    <string name="hammasi">Hammasi</string>
    <string name="_10">10</string>
    <string name="izohni_kiriting">Izohni kiriting</string>
    <string name="sanada_topshirilganlar">Sanada topshirilganlar.</string>
    <string name="qarz">Qarz</string>
    <string name="sanada_yuvilganlar">Sanada yuvilganlar</string>
    <string name="click">Click</string>
    <string name="naqd">Naqd</string>
    <string name="xizmat_turi">Xizmat turi</string>
    <string name="ha">Ha</string>
    <string name="yo_q">Yo\'q</string>
    <string name="buyurtmalar">Buyurtmalar</string>
    <string name="ta">ta</string>
    <string name="jami_summa_">Jami summa:</string>
    <string name="so_m">so\'m</string>
    <string name="yakuniy_to_lov">Yakuniy to\'lov:</string>
    <string name="mahsulotlar">Mahsulotlar</string>
    <string name="gilam">Gilam</string>
    <string name="o_lcham">O\'lcham</string>
    <string name="narx">Narx</string>
    <string name="tokcha">Tokcha</string>
    <string name="print">Chop etish</string>
    <string name="file_created_successfully">Fayl muvaffaqqiyatli yaratildi!</string>
</resources>