<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:background="@drawable/custom_input_4">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_kvitansiya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/kvitansiya"
                style="@style/textStyle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18"
                android:textColor="#4CAF50"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="#4CAF50"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/restart"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#4CAF50"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_person"
                android:layout_width="30dp"
                android:layout_height="30dp"
                style="@style/svgTheme"
                android:src="@drawable/ic_person_kvitamsiya" />

            <TextView
                android:id="@+id/txt_washing_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:text="@string/yuvish_test"
                style="@style/textStyle"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_phone"
                android:layout_width="30dp"
                style="@style/svgTheme"
                android:layout_height="30dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/txt_nomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/_998999999999"
                android:textColor="#3F51B5"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_location"
                android:layout_width="30dp"
                style="@style/svgTheme"
                android:layout_height="30dp"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fergana"
                style="@style/textStyle"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_time"
                android:layout_width="30dp"
                android:layout_height="30dp"
                style="@style/svgTheme"
                android:src="@drawable/ic_time" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2022_08_08_12_45_59"
                style="@style/textStyle"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#4CAF50"
                android:drawableLeft="@drawable/ic_check"
                android:text="@string/topshirish"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_arranged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="#2196F3"
                android:textColor="@color/white"
                android:drawableLeft="@drawable/ic_format"
                android:text="@string/tartiblash"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>